--- a/.github/workflows/profile_3d.yml
+++ b/.github/workflows/profile_3d.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Commit & Push
         run: |
           git config user.name HaynesChennn
-          git config user.email chen.ian0713@gmail.com
+          git config user.email HungYat.Chan@gmail.com
           git add -A .
           git commit -m "generated"
           git push
